[package]
name = "ruby_rqrr"
version = "0.9.2"
edition = "2021"
authors = ["Shawn Jordan <shawn.jordan@me.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
image = { version ="0.24.9", default-features = false, features = ["png", "jpeg", "gif"]  }
magnus = { version = "0.6.2" }
rqrr = { version = "0.9.2"}
url = { version = "2.5.4" }
