[package]
name = "ruby_rqrr"
version = "0.9.2"
edition = "2021"
rust-version = "1.86.0"
authors = ["Shawn Jordan <shawn.jordan@me.com>"]
license = "MIT"
publish = false

[lib]
name = "ruby_rqrr"
crate-type = ["cdylib"]

[dependencies]
image = { version ="0.25.6", default-features = false, features = ["png", "jpeg", "gif"]  }
magnus = { version = "0.7", features = ["rb-sys"] }
rb-sys = { version = "*", default-features = false, features = [
    "stable-api-compiled-fallback",
] }
rqrr = { version = "0.9.2"}
url = { version = "2.5.4" }
